# Dawn-of-the-Others

./: .gitignore  CMakeLists.txt  README.md
include/: player.h  rogue.h
src/: main.c  player.c
